Made bucket supply of slices limitless
Added a fraction readout on the bucket next to the icon
For icon on bucket, show an entire "full icon" and the piece within it
Added shadows for animating pieces
Added buckets/dragging for vertical bars
# 0.00.37 (61374) Feb 15, 2012
Added buckets/dragging for horizontal bars
Factored factory pattern out of PieSet in preparation for more bucket/drag representations
# 0.00.36 (61366) Feb 14, 2012
Workaround for a bug: when dragging number line quickly, pie set gets out of sync.  So update it when representations change
When increasing numerator, take from slices in front (higher z-ordering)
Reduced shadow offset to 50% distance
Made shadow black with 75% opacity
# 0.00.35 (61302) Feb 13, 2012
Show a shadow behind the object so it will look like it is a bit out of the screen and hence not part of the fraction
Added a piece icon to the bucket
Performance improvements: don't construct water glasses unless visible
# 0.00.34 (61278) Feb 13, 2012
# 0.00.33 (61275) Feb 13, 2012
Fixed: if a slice is moving toward the pie when the user presses "down" on the numerator, it should turn around and head back to the bucket
Changed from IntClientProperty back to IntegerProperty
Fixed a bug in PieSet.toContainerState
Generalized interfaces to SettableProperty and IntClientProperty
Switched to immutable model with public property interface
When changing the numerator, move pieces from the bucket to the pies
Fixed: When animating to bucket, pieces should rotate up and have their tip go to the tip location
Fixed: When animating to bucket, pieces should have their tip go to the tip location
Fixed: Exception when dragging a piece that animated to the bucket.
Animate pieces to the bucket
Fixed: Pieces don't drag the right amount when the screen is scaled
Fixed: Pieces should be pointing up in bucket so they are in alignment with nearest target cells
Randomize the location of slices in the bucket
Fixed: Get rid of pie slice line
Fixed bucket location